# AI-Driven-Paddy-Classifier

./: .gitignore  README.md  csv_read.py  helper_func.py  irrigation_label.py  lstm_training_with_norm.ipynb  lstm_training_with_norm.py  pyproject.toml  requirements.txt  sequence.py  test.py
Output/: X.npy  X_test.npy  site_ids.npy  site_ids_test.npy  y.npy  y_test.npy
data/: Kolkata.csv  Lucknow.csv  Ludhiana.csv  Thanjavur.csv  Visakhapatnam.csv  jorhat.csv
model/: bilstm_attention.h5  bilstm_attention.keras  bilstm_attention.weights.h5
